feat: Incrementando o Spring Boot

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 
     <modules>
         <module>revisao_thiago</module>
+        <module>projfabricasoftkaffeeleganz</module>
     </modules>
 
 </project>
