--- a/.github/workflows/buildbackend.yml
+++ b/.github/workflows/buildbackend.yml
@@ -10,11 +10,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout the repository
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      # Log in to GitHub Container Registry
+      - name: Set up JDK 17
+        uses: actions/setup-java@v2
+        with:
+          java-version: '17' 
+
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v2
         with:
@@ -22,7 +25,6 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      # Build and push Docker image to GitHub Container Registry
       - name: Build and Push Docker Image
         run: |
           docker build -t ghcr.io/${{ github.repository }}/projfabsoft:latest ./kaffeeleganz
