--- a/.github/workflows/buildbackend.yml
+++ b/.github/workflows/buildbackend.yml
@@ -10,14 +10,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # Checkout the repository
       - name: Checkout Code
         uses: actions/checkout@v3
 
+      # Set up Java 17 (ou 21, se disponível) com a distribuição correta
       - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
-          java-version: '17' 
-
+          java-version: '17'  # ou '21' se preferir
+          distribution: 'adoptopenjdk'  # ou use 'zulu', 'amazoncorretto', etc.
+        
+      # Log in to GitHub Container Registry
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v2
         with:
@@ -25,6 +29,7 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      # Build and push Docker image to GitHub Container Registry
       - name: Build and Push Docker Image
         run: |
           docker build -t ghcr.io/${{ github.repository }}/projfabsoft:latest ./kaffeeleganz
