--- a/.github/workflows/buildbackend.yml
+++ b/.github/workflows/buildbackend.yml
@@ -14,22 +14,26 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      # Set up Java 17 (ou 21, se disponível) com a distribuição correta
+      # Set up JDK 17 (ou 21, se disponível) com a distribuição correta
       - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
-          java-version: '17'  # ou '21' se preferir
-          distribution: 'adoptopenjdk'  # ou use 'zulu', 'amazoncorretto', etc.
+          java-version: '17'  # Ou '21', se preferir
+          distribution: 'temurin'  # Agora 'temurin' em vez de 'adoptopenjdk'
         
+      # Verificar a versão do JDK para garantir que foi instalado corretamente
+      - name: Check Java Version
+        run: java -version  # Isso ajuda a garantir que o JDK foi configurado corretamente
+
       # Log in to GitHub Container Registry
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: ${{ github.actor }}  # Nome de usuário do GitHub
+          password: ${{ secrets.GITHUB_TOKEN }}  # Token de acesso do GitHub
 
-      # Build and push Docker image to GitHub Container Registry
+      # Build e Push da imagem Docker para o GitHub Container Registry
       - name: Build and Push Docker Image
         run: |
           docker build -t ghcr.io/${{ github.repository }}/projfabsoft:latest ./kaffeeleganz
