--- a/.github/workflows/buildbackend.yml
+++ b/.github/workflows/buildbackend.yml
@@ -14,26 +14,15 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      # Set up JDK 21 (em vez de 17)
-      - name: Set up JDK 21
-        uses: actions/setup-java@v2
-        with:
-          java-version: '21'  # Usando Java 21
-          distribution: 'temurin'  # Usando a distribuição Temurin, que suporta o Java 21
-
-      # Verificar a versão do JDK
-      - name: Check Java Version
-        run: java -version  # Isso ajuda a garantir que o JDK foi configurado corretamente
-
       # Log in to GitHub Container Registry
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
-          username: ${{ github.actor }}  # Nome de usuário do GitHub
-          password: ${{ secrets.GITHUB_TOKEN }}  # Token de acesso do GitHub
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-      # Build e Push da imagem Docker para o GitHub Container Registry
+      # Build and push Docker image to GitHub Container Registry
       - name: Build and Push Docker Image
         run: |
           docker build -t ghcr.io/${{ github.repository }}/projfabsoft:latest ./kaffeeleganz
