--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.1.7",
+    "@radix-ui/react-dialog": "^1.1.14",
     "axios": "^1.9.0",
     "keen-slider": "^6.8.6",
     "react": "^19.0.0",
